[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://HelvetiPixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/output-onlinepngtools (6).png" type="Texture" id=3]
[ext_resource path="res://audio/sounds/selection.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/musicswitch.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/soundswitch.tscn" type="PackedScene" id=6]
[ext_resource path="res://glasses-big-half.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 256
font_data = ExtResource( 2 )

[node name="Node" type="Node"]

[node name="MainMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MainMenu"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Label" type="Label" parent="MainMenu/Control"]
margin_left = 1731.0
margin_top = 989.443
margin_right = 3651.0
margin_bottom = 1212.44
rect_scale = Vector2( 0.64, 0.64 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Alpha
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MainMenu/Control"]
margin_left = 13.1624
margin_top = 1031.31
margin_right = 1933.16
margin_bottom = 1254.31
rect_scale = Vector2( 0.385315, 0.385315 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "pointfoview.kvalitne.cz"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="ColorRect" type="Sprite" parent="MainMenu/CenterContainer"]
show_behind_parent = true
position = Vector2( 959.976, 539.896 )
z_index = -1
z_as_relative = false
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
margin_left = 384.0
margin_top = 251.0
margin_right = 1536.0
margin_bottom = 828.0
custom_constants/separation = 20

[node name="glasses-big-half" type="Sprite" parent="MainMenu/CenterContainer/VBoxContainer"]
position = Vector2( 642.536, 310.341 )
scale = Vector2( 2.6722, 2.6722 )
texture = ExtResource( 7 )

[node name="CenterContainer" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
margin_right = 1152.0
margin_bottom = 219.0

[node name="Label" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 1152.0
margin_bottom = 219.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Point of View"

[node name="CenterContainer2" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
margin_top = 239.0
margin_right = 1152.0
margin_bottom = 577.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 386.0
margin_right = 766.0
margin_bottom = 338.0

[node name="CenterContainer" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 380.0
margin_bottom = 110.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_right = 380.0
margin_bottom = 110.0

[node name="Selector" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 110.0
rect_min_size = Vector2( 56, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="playbutton" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 380.0
margin_bottom = 110.0
rect_min_size = Vector2( 320, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Start"

[node name="CenterContainer2" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 114.0
margin_right = 380.0
margin_bottom = 224.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 380.0
margin_bottom = 110.0

[node name="Selector" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 56.0
margin_bottom = 110.0
rect_min_size = Vector2( 56, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="playbutton" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 60.0
margin_right = 380.0
margin_bottom = 110.0
rect_min_size = Vector2( 320, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Levels"

[node name="CenterContainer4" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 228.0
margin_right = 380.0
margin_bottom = 338.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4"]
margin_right = 380.0
margin_bottom = 110.0

[node name="Selector" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_right = 56.0
margin_bottom = 110.0
rect_min_size = Vector2( 56, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="playbutton" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_left = 60.0
margin_right = 380.0
margin_bottom = 110.0
rect_min_size = Vector2( 320, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Exit"

[node name="ButtonSelection_sn" type="AudioStreamPlayer" parent="MainMenu"]
stream = ExtResource( 4 )

[node name="MusicSwitch" parent="MainMenu" instance=ExtResource( 5 )]
position = Vector2( 1424.58, 949.822 )
scale = Vector2( 9, 9 )

[node name="SoundSwitch" parent="MainMenu" instance=ExtResource( 6 )]
position = Vector2( 1592.48, 953.831 )
scale = Vector2( 8, 8 )
